fixed footer overflow issue

--- a/second-iteration/main.scss
+++ b/second-iteration/main.scss
@@ -72,7 +72,7 @@ aside {
 
 article {
     grid-area: article;
-    border: solid 2px black;
+    border: solid 2px green;
 }
 
 footer {
@@ -147,6 +147,12 @@ footer {
     margin-inline: auto;
     padding-inline: 2rem;
 
+    .projects__header {
+        text-align: center;
+        font-size: 3rem;
+        font-weight: bold;
+    }
+
     .projects-grid {
         display: grid;
         gap: .25rem;
@@ -170,7 +176,7 @@ footer {
             .card__content {
                 background: white;
                 align-self: end;
-                //margin: .5rem .5rem 2rem;
+                margin: .3rem .3rem 1.5rem;
                 padding: .2rem;
                 // box shadow params are horzontal/verticle/blur/color
                 // (new syntax, but is transparent black)
@@ -215,4 +221,52 @@ footer {
 .stacked > * {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+}
+
+.main__about-me {
+    padding: 2rem;
+
+    h2 {
+        text-align: center;
+        padding: 2rem;
+    }
+
+    img {        
+        border: 1px transparent black;
+        border-radius: 10rem;      
+        box-shadow: 0 .25rem 1rem rgb(0 0 0 / .1);
+    }
+
+    p {
+        padding: 3rem;
+    }
+    
+}
+
+.main__footer-container {
+    padding: 2rem;
+    background-color: black;
+    
+    div {
+        align-items: center;
+        text-align: center;
+        max-width: 100%;
+
+        .footer__links { 
+            padding: 1rem;
+            
+            i {
+                transform: scale(250%);
+                padding: 1rem;
+            }
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+            font-size: 1.5rem;
+            padding: .2rem;
+        }
+    
+    }
 }
